# forms-api-prototype

./: .gitignore  Gemfile  README.md  config.ru  loader.rb  manifest.yml  server.rb
.github/workflows/: deploy-branch-to-space.yml  deploy.yml
db/: database.rb
db/migrations/: 1_add_forms_table.rb
py-prototype/: Makefile  app.py  pyproject.toml  readme.md  server.rb
py-prototype/py_prototype.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
py-prototype/tests/: test_py_prototype.py
rust-api/: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
rust-api/src/: api.rs  forms.rs  main.rs
views/: login.erb
