[tool.poetry]
name = "py-prototype"
version = "0.1.0"
description = ""
authors = ["Tristram Oaten <tristram.oaten@digital.cabinet-office.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.10.2"
mypy = "^0.931"
flask-restful = "^0.3.9"
flake8 = "^4.0.1"
watchdog = "^2.1.6"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
